--- a/entree-app/src/app/header/header.component.html
+++ b/entree-app/src/app/header/header.component.html
@@ -161,8 +161,8 @@
     
     
           <div id="iconsdiv bg-success" class="iconsdiv">
-            <a routerLink="/login"><img src="../../assets/log-in.svg" alt="icon" width="40" height="20" class=""></a>
-            <a><img src="../../assets/bookmark.svg" alt="icon" width="40" height="20" class="" (click)="openWishlist()"></a>
+            <a><img src="../../assets/log-in.svg" alt="icon" width="40" height="20" class="" (click)="login()"></a>
+            <a routerLink="/wishlist"><img src="../../assets/bookmark.svg" alt="icon" width="40" height="20" class=""></a>
             <a routerLink="/cart"><img src="../../assets/shopping-cart.svg" alt="icon" width="40" height="20" class=""></a>
     
           </div>
