--- a/react-entree/src/css/Header.css
+++ b/react-entree/src/css/Header.css
@@ -27,7 +27,7 @@
       border-radius: 20px;
       display: block;
       padding: 9px 4px 9px 40px;
-      background: transparent url("./search_icon.svg") no-repeat 10px;
+      background: transparent url("../images/search_icon.svg") no-repeat 10px;
     }
     #searchbar:focus {
       outline: none;
