cart_front_done

--- a/entree-app/src/app/cart/cart.component.html
+++ b/entree-app/src/app/cart/cart.component.html
@@ -1,101 +1,80 @@
 <div class="div_cart">
   <div class="cart" id="cart">
-    <!-- <div class="h4_cart"> -->
-      <!-- <h4 class="">Shopping cart</h4> -->
-      <!-- <button
-            type="button"
-            class="btn-close"
-            id="btn-close"
-            aria-label="Close"
-            (click)="closeButton()"
-          ></button> -->
-    <!-- </div> -->
-   
     <div class="container container_cart">
       <div *ngFor="let item of cartdetails">
+        <div class="tiles_cart">
+          <img
+            src="{{ item.image }}"
+            width="70px"
+            height="80px"
+            style="cursor: pointer"
+          />
 
-      
-      <div class="tiles_cart">
-        <img
-          src={{item.image}}
-          width="70px"
-          height="80px"
-          style="cursor: pointer"
-        />
+          <div class="cartitems">
+            <div>
+              <h5>{{ item.title }}</h5>
+              <h6>Price : $ {{ item.price }}</h6>
+            </div>
+            <div>
+              <p class="count_cart">
+                <span
+                  ><img
+                    src="../../assets/minus.png"
+                    width="25px"
+                    style="cursor: pointer"
+                    (click)="decrease()"
+                /></span>
+                {{ count }}
+                <span
+                  ><img
+                    src="../../assets/plus.png"
+                    width="25px"
+                    style="cursor: pointer"
+                    (click)="increase()"
+                /></span>
+              </p>
+            </div>
+          </div>
 
-        <div class="cartitems">
-          <div>
-            <h5>{{item.title}}</h5>
-            <h6>Price : $ {{item.price}}</h6>
-          </div>
-          <div>
-            <p class="count_cart">
-              <span
-                ><img
-                  src="../../assets/minus.png"
-                  width="25px"
-                  style="cursor: pointer"
-                  (click)="decrease()"
-              /></span>
-              {{ count }}
-              <span
-                ><img
-                  src="../../assets/plus.png"
-                  width="25px"
-                  style="cursor: pointer"
-                  (click)="increase()"
-              /></span>
-            </p>
-          </div>
+          <button
+            type="button"
+            class="btn delimg"
+            id="remove_cart"
+            aria-label="Close"
+          >
+            <img src="../../assets/delete.png" width="20px" class="delimg" />
+          </button>
         </div>
-
-        <button
-        type="button"
-        class="btn delimg"
-        id="remove_cart"
-        aria-label="Close"
-      >
-      <img src="../../assets/delete.png" width="20px" class="delimg"/>
-    </button>
       </div>
-    </div>
-
-      
-
-      
     </div>
   </div>
 
   <div class="cart_summary">
     <div class="summary_content">
-        <h4 style="text-align: center;">Summary</h4>
-        <div class="summary_tiles">
-            <p>Subtotal</p>
-            <p>$360</p>
-           
-        </div>
-        <hr class="hr">
-        <div class="summary_tiles">
-            <p>Discount</p>
-            <p>$360</p>
-         
-        </div>
-        <hr class="hr">
-        <div class="summary_tiles">
-            <p>Shipping</p>
-            <p>$360</p>
-            
-        </div>
-        <hr class="hr">
-        <div class="summary_tiles">
-            <p>Total</p>
-            <p>$360</p>
-            
-        </div>
+      <h4 style="text-align: center">Summary</h4>
+      <div class="summary_tiles">
+        <p>Subtotal</p>
+        <p>$360</p>
+      </div>
+      <hr class="hr" />
+      <div class="summary_tiles">
+        <p>Discount</p>
+        <p>$360</p>
+      </div>
+      <hr class="hr" />
+      <div class="summary_tiles">
+        <p>Shipping</p>
+        <p>$360</p>
+      </div>
+      <hr class="hr" />
+      <div class="summary_tiles">
+        <p>Total</p>
+        <p>$360</p>
+      </div>
 
-        <div class="btn_parent">
-            <button class="btn cart_btn_checkout">Checkout</button>
-          </div>
+      <div class="btn_parent">
+        <button class="btn cart_btn_checkout">Checkout</button>
+      </div>
     </div>
   </div>
 </div>
