added forget password component

--- a/react-entree/src/css/Header.css
+++ b/react-entree/src/css/Header.css
@@ -9,6 +9,9 @@
     .topbar {
       background-color: white;
     }
+    #topbarnav{
+      margin-top: 0px;
+    }
     
     #searchdiv{
         display: flex;
