--- a/react-entree/src/css/Products.css
+++ b/react-entree/src/css/Products.css
@@ -1,7 +1,13 @@
 
 .allproducts{
     /* background-color: red; */
+    /* padding-top: 0px; */
+    /* display: flex; */
+    margin-top: 0;
+    justify-content: start;
     box-shadow: none;
+    /* background-color: red; */
+
 }
 .card-body{
     display: block;
