--- a/react-entree/src/css/Filter.css
+++ b/react-entree/src/css/Filter.css
@@ -2,19 +2,25 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    /* margin: 0px 25px; */
-    /* padding: 0px 25px; */
+    margin-bottom: 0;
 }
+h2{
+    color: #3b3b98;
+}
+h6{
+    color: #3b3b98;
+}
+
 .filter{
     height: 100%;
     width: 200px;
     display: flex;
     gap: 10px;
-    /* background-color: yellow; */
     align-items: center;
     justify-content: center;
 }
 .filter select{
+    /* color: #3b3b98; */
     height: 30px;
-    width: 80px;
+    width: 100px;
 }
